2005-08-17  Kaushal Kumar  <kakumar@novell.com>

	* utils.c (url_requested): Added the missing close call for fd.

2005-08-10  Kaushal Kumar  <kakumar@novell.com>

	* menubar.c: Fix the command association for font sizes -2, -1.

	Fixes bug #313014.

2005-08-04  Kaushal Kumar  <kakumar@novell.com>

	* menubar.c (menubar_update_format): Set the sensitization of Format menu
	items like Text, Font sizes, and Styles, based on the format mode. 

	Fixes bug #311106.
	Patch committed after approval from release team.

2005-08-01  Kaushal Kumar  <kakumar@novell.com>

	* menubar.c (insert_table): Handle the case when a table is being 
	inserted over a selection.

	Fixes bug #309686.

2005-07-22  Kaushal Kumar  <kakumar@novell.com>

	* menubar.c (menubar_update_format): Set Page format option sensitive 
	only for html mode. 

	Fixes bug #310961.

2005-07-22  Kaushal Kumar  <kakumar@novell.com>

	* body.c: HIGify two template strings.

	* menubar.c (format_page_cb): HIGify dialog title.

	* properties.c (switch_page): HIGify title display.

	Based on patch from H.A.Riyaz Ahmed.
	Fixes bug #246244.

2005-07-19  Tor Lillqvist  <tml@novell.com>

	* Makefile.am: Use SOEXT instead of hardcoded .so. Append EXEEXT
	to executable editor component name.

2005-07-13  Diego Gonzalez  <diego@pemas.net>

	* gi-color-combo.c (gi_color_combo_construct): remove deprecated use
	of gdk_pixbuf_unref.

2005-07-12  Kaushal Kumar  <kakumar@novell.com>

	Patch given by: H.A.Riyaz Ahmed.

	* menubar.c : HIGify the Text and Paragraph dialog names in Format.

	* gtkhtml-editor-properties.glade : Fixed a label as per the HIG.

	Fixes bug #246239, #246242.
 
2005-07-06  Kaushal Kumar  <kakumar@novell.com>

	* utils.c (editor_has_html_object): Fix typo. Fixes bug #309242.

2005-06-03  Srinivasa Ragavan <sragavan@novell.com>

	* engine.c (editor_engine_new): Added the GtkHTML widget to the engine as a data to the
	object, so that it can be fetched at the evolution side for
	DnD support.
